trunk/Archive2/36/dabc0e1ecbc4b9/output
main.cpp:5:15: error: use of undeclared identifier 'undeclared'
        for(auto i : undeclared) {
                     ^
0  clang           0x0000000001fcd3a2 llvm::sys::PrintStackTrace(_IO_FILE*) + 34
1  clang           0x0000000001fcd001
2  libpthread.so.0 0x00007ff6dc1d1cb0
3  clang           0x000000000112c82c clang::ASTContext::getTypeInfoImpl(clang::Type const*) const + 1004
4  clang           0x0000000001129d92 clang::ASTContext::getTypeInfo(clang::Type const*) const + 178
5  clang           0x000000000112bbe5 clang::ASTContext::getTypeInfoInChars(clang::Type const*) const + 21
6  clang           0x000000000112bc60 clang::ASTContext::getTypeInfoInChars(clang::QualType) const + 16
7  clang           0x000000000122e09d
8  clang           0x000000000122eceb
9  clang           0x0000000001231545
10 clang           0x000000000122c336 clang::ASTContext::getASTRecordLayout(clang::RecordDecl const*) const + 1398
11 clang           0x000000000112c7cf clang::ASTContext::getTypeInfoImpl(clang::Type const*) const + 911
12 clang           0x0000000001129d92 clang::ASTContext::getTypeInfo(clang::Type const*) const + 178
13 clang           0x000000000112c517 clang::ASTContext::getTypeInfoImpl(clang::Type const*) const + 215
14 clang           0x0000000001129d92 clang::ASTContext::getTypeInfo(clang::Type const*) const + 178
15 clang           0x000000000112bb0f clang::ASTContext::getPreferredTypeAlign(clang::Type const*) const + 15
16 clang           0x00000000006f6858
17 clang           0x00000000011fa5fd
18 clang           0x00000000011eff67
19 clang           0x00000000011f2205
20 clang           0x00000000011f27f1 clang::Expr::EvaluateAsRValue(clang::Expr::EvalResult&, clang::ASTContext const&) const + 289
21 clang           0x00000000011f2dc8 clang::Expr::EvaluateAsInt(llvm::APSInt&, clang::ASTContext const&, clang::Expr::SideEffectsKind) const + 120
22 clang           0x0000000000c028ac clang::Sema::CheckRemainderOperands(clang::ActionResult<clang::Expr*, true>&, clang::ActionResult<clang::Expr*, true>&, clang::SourceLocation, bool) + 668
23 clang           0x0000000000c082a3 clang::Sema::CreateBuiltinBinOp(clang::SourceLocation, clang::BinaryOperatorKind, clang::Expr*, clang::Expr*) + 4067
24 clang           0x0000000000c08d18 clang::Sema::BuildBinOp(clang::Scope*, clang::SourceLocation, clang::BinaryOperatorKind, clang::Expr*, clang::Expr*) + 328
25 clang           0x0000000000d59fea
26 clang           0x0000000000d554a5
27 clang           0x0000000000d59f6b
28 clang           0x0000000000d554a5
29 clang           0x0000000000d54887
30 clang           0x0000000000d59f94
31 clang           0x0000000000d554a5
32 clang           0x0000000000d54887
33 clang           0x0000000000d57581
34 clang           0x0000000000d5763b clang::Sema::SubstInitializer(clang::Expr*, clang::MultiLevelTemplateArgumentList const&, bool) + 75
35 clang           0x0000000000d767f0 clang::TemplateDeclInstantiator::VisitVarDecl(clang::VarDecl*) + 2000
36 clang           0x0000000000d58570 clang::Sema::InstantiateClass(clang::SourceLocation, clang::CXXRecordDecl*, clang::CXXRecordDecl*, clang::MultiLevelTemplateArgumentList const&, clang::TemplateSpecializationKind, bool) + 3856
37 clang           0x0000000000d58e84 clang::Sema::InstantiateClassTemplateSpecialization(clang::SourceLocation, clang::ClassTemplateSpecializationDecl*, clang::TemplateSpecializationKind, bool) + 1636
38 clang           0x0000000000d8e1ce clang::Sema::RequireCompleteType(clang::SourceLocation, clang::QualType, clang::Sema::TypeDiagnoser&) + 1294
39 clang           0x0000000000b90460 clang::Sema::CheckBaseSpecifier(clang::CXXRecordDecl*, clang::SourceRange, bool, clang::AccessSpecifier, clang::TypeSourceInfo*, clang::SourceLocation) + 272
40 clang           0x0000000000d52786 clang::Sema::SubstBaseSpecifiers(clang::CXXRecordDecl*, clang::CXXRecordDecl*, clang::MultiLevelTemplateArgumentList const&) + 870
41 clang           0x0000000000d57a00 clang::Sema::InstantiateClass(clang::SourceLocation, clang::CXXRecordDecl*, clang::CXXRecordDecl*, clang::MultiLevelTemplateArgumentList const&, clang::TemplateSpecializationKind, bool) + 928
42 clang           0x0000000000d58e84 clang::Sema::InstantiateClassTemplateSpecialization(clang::SourceLocation, clang::ClassTemplateSpecializationDecl*, clang::TemplateSpecializationKind, bool) + 1636
43 clang           0x0000000000d8e1ce clang::Sema::RequireCompleteType(clang::SourceLocation, clang::QualType, clang::Sema::TypeDiagnoser&) + 1294
44 clang           0x0000000000ad4994 clang::Sema::RequireCompleteDeclContext(clang::CXXScopeSpec&, clang::DeclContext*) + 260
45 clang           0x0000000000c4b123
46 clang           0x0000000000c50a4b clang::Sema::BuildMemberReferenceExpr(clang::Expr*, clang::QualType, clang::SourceLocation, bool, clang::CXXScopeSpec&, clang::SourceLocation, clang::NamedDecl*, clang::DeclarationNameInfo const&, clang::TemplateArgumentListInfo const*) + 827
47 clang           0x0000000000d64067
48 clang           0x0000000000d54e75
49 clang           0x0000000000d5a6ff
50 clang           0x0000000000d5533e
51 clang           0x0000000000d68b56
52 clang           0x0000000000d6938a
53 clang           0x0000000000d67d27
54 clang           0x0000000000d694ef clang::Sema::SubstStmt(clang::Stmt*, clang::MultiLevelTemplateArgumentList const&) + 79
55 clang           0x0000000000d7a83d clang::Sema::InstantiateFunctionDefinition(clang::SourceLocation, clang::FunctionDecl*, bool, bool) + 1533
56 clang           0x0000000000d7a05b clang::Sema::PerformPendingInstantiations(bool) + 491
57 clang           0x0000000000d7a9e0 clang::Sema::InstantiateFunctionDefinition(clang::SourceLocation, clang::FunctionDecl*, bool, bool) + 1952
58 clang           0x0000000000d7a05b clang::Sema::PerformPendingInstantiations(bool) + 491
59 clang           0x0000000000abc432 clang::Sema::ActOnEndOfTranslationUnit() + 1506
60 clang           0x0000000000a2c38f clang::Parser::ParseTopLevelDecl(clang::OpaquePtr<clang::DeclGroupRef>&) + 399
61 clang           0x0000000000a2367b clang::ParseAST(clang::Sema&, bool, bool) + 283
62 clang           0x0000000000771969 clang::FrontendAction::Execute() + 169
63 clang           0x00000000007517b5 clang::CompilerInstance::ExecuteAction(clang::FrontendAction&) + 293
64 clang           0x000000000073c3f7 clang::ExecuteCompilerInvocation(clang::CompilerInstance*) + 1671
65 clang           0x00000000007372d8 cc1_main(char const**, char const**, char const*, void*) + 1224
66 clang           0x000000000071b3db main + 7995
67 libc.so.6       0x00007ff6db40a76d __libc_start_main + 237
68 clang           0x00000000007362ad
Stack dump:
0.	Program arguments: /usr/local/bin/clang -cc1 -triple x86_64-unknown-linux-gnu -emit-obj -mrelax-all -disable-free -disable-llvm-verifier -main-file-name main.cpp -mrelocation-model static -mdisable-fp-elim -fmath-errno -masm-verbose -mconstructor-aliases -munwind-tables -fuse-init-array -target-cpu x86-64 -target-linker-version 2.22 -resource-dir /usr/local/bin/../lib/clang/3.4 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8 -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/x86_64-linux-gnu -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/backward -internal-isystem /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/x86_64-linux-gnu/c++/4.8 -internal-isystem /usr/local/include -internal-isystem /usr/local/bin/../lib/clang/3.4/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -std=c++11 -fdeprecated-macro -fdebug-compilation-dir /tmp/1384117378-1273696145 -ferror-limit 19 -fmessage-length 0 -mstackrealign -fobjc-runtime=gcc -fobjc-default-synthesize-properties -fcxx-exceptions -fexceptions -fdiagnostics-show-option -backend-option -vectorize-loops -o /tmp/main-OAb9Lu.o -x c++ main.cpp 
1.	<eof> parser at end of file
2.	/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/functional:2331:2: instantiating function definition 'operator='
3.	/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/functional:2255:2: instantiating function definition 'function'
clang: error: unable to execute command: Segmentation fault (core dumped)
clang: error: clang frontend command failed due to signal (use -v to see invocation)
clang version 3.4 (trunk 184460)
Target: x86_64-unknown-linux-gnu
Thread model: posix
clang: note: diagnostic msg: PLEASE submit a bug report to http://llvm.org/bugs/ and include the crash backtrace, preprocessed source, and associated run script.
clang: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang: note: diagnostic msg: /tmp/main-QHmu6f.cpp
clang: note: diagnostic msg: /tmp/main-QHmu6f.sh
clang: note: diagnostic msg: 

********************
